examples/errors/parsing/incr-spine-no-res.rcn
main : () [impure] =
  let (v, pf, r2) = Get[Int](p, r);
  ()
